mydeploy/mydeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mygithubdeploy
  labels:
   github: deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      github: deploy
  template:
    metadata:
      labels:
        github: deploy        
    spec:
      serviceAccountName: mygithubdeploy
      containers:
        - name: mygithubdeploy
          securityContext:
            {}
          image: "gcr.io/my-project-kuber-327007/static-site"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8081
          readinessProbe:
            httpGet:
              path: /
              port: 8081
          resources:
            {}
