mydeploy/myservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: mygithubdeploy
  labels:
  	github: deploy
   spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: http
      protocol: TCP
      name: http
  selector:
    github: deploy
